--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ footer {
   left: 0;
   right: 0;
   text-align: center;
-  font-size: .75em;
+  font-size: .75rem;
 }
 
 .center {
@@ -17,6 +17,15 @@ footer {
 
 .error {
   color: #ff0000;
+}
+
+form input {
+  padding: 0 5px;
+  border-radius: 13px;
+}
+
+form button {
+  border-radius: 13px;
 }
 
 #todo-container {
